Add a java property to specify an endorsed directory. Needed for XML parser used by opensaml-2.2.